# workspace-linker

./: .npmignore  Cargo.toml  README.md  TODO.md  package.json  publish.sh
.cargo/: config.toml
src/: main.rs  project.rs  project_directory.rs
