[package]
name = "module-linker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
env_logger = "0.11.1"
log = "0.4.20"
path-absolutize = "3.1.1"
pathdiff = "0.2.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
